# training-tracker-fastapi

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  main.py  models.py
app/database/: database.py
app/dependencies/: auth.py  limiter.py
app/model/: ai.py  training_activities.py  training_sessions.py
app/models/: ai.py  auth.py  training_activities.py  training_sessions.py
app/routers/: ai.py  auth.py  training_activities.py  training_sessions.py
app/services/: activity_service.py  ai_service.py  auth_service.py  training_session_service.py
tests/: conftest.py
tests/routers/: test_activities_integration.py  test_ai_integration.py  test_auth_integration.py  test_sessions_integration.py
tests/services/: test_activity_service.py  test_ai_service.py  test_auth_service.py  test_training_session_service.py
